# alexandrie

./: .dockerignore  .env  .gitignore  .gitmodules  Cargo.toml  Dockerfile  LICENSE-APACHE  LICENSE-MIT  README.md  Rocket.toml  alexandrie-schema.sql  alexandrie.toml  database-layout.html  docker-compose.yaml  docker-compose.yml  example.env  getting-started.html  index.html  installation-script.html  introduction.html  print.html  run_docker.sh  rust-toolchain.toml  searchindex.js  searchindex.json  start_docker.sh  startup.sh
.cargo/: .crates.toml  .crates2.json  config  credentials
.github/workflows/: ci.yaml  coverage.yml  docs.yaml  e2e.yaml  formatting.yaml  standard-build.yml
SQLite/: sqlite3.def  sqlite3.exp  sqlite3.lib
alexandrie/: Cargo.toml  build.rs
alexandrie-index/: Cargo.toml
alexandrie-index/src/: lib.rs
alexandrie-rendering/: Cargo.toml
alexandrie-rendering/src/: lib.rs
alexandrie-storage/: Cargo.toml
alexandrie-storage/src/: disk.rs  error.rs  lib.rs  s3.rs
alexandrie-storage/src/config/: disk.rs  mod.rs  s3.rs
alexandrie/src/: error.rs  main.rs
alexandrie/src/api/: categories.rs  mod.rs
alexandrie/src/api/account/token/: info.rs
alexandrie/src/api/crates/: download.rs  owners.rs  publish.rs  search.rs  unyank.rs  yank.rs
alexandrie/src/config/: frontend.rs  mod.rs
alexandrie/src/frontend/: krate.rs  last_updated.rs  most_downloaded.rs  search.rs
alexandrie/src/frontend/account/: login.rs
alexandrie/src/frontend/account/manage/: passwd.rs
alexandrie/src/frontend/account/manage/tokens/: revoke.rs
alexandrie/src/utils/: build.rs  cookies.rs  mod.rs  request_log.rs  version.rs
alexandrie/src/utils/auth/: frontend.rs  mod.rs
alexandrie/src/utils/response/: mod.rs
assets/: icons.css
assets/wasm/: wasm_pbkdf2.js  wasm_pbkdf2_bg.wasm
concepts/: crate-index.html  crate-storage.html  mod.html
crates/alexandrie/: Cargo.toml  build.rs
crates/alexandrie-index/: Cargo.toml
crates/alexandrie-index/src/: error.rs  lib.rs  tree.rs
crates/alexandrie-index/src/config/: cli.rs
crates/alexandrie-index/src/index/: cli.rs  git2.rs
crates/alexandrie-rendering/: Cargo.toml
crates/alexandrie-rendering/src/: lib.rs
crates/alexandrie-storage/: Cargo.toml
crates/alexandrie-storage/src/: lib.rs  s3.rs
crates/alexandrie-storage/src/config/: s3.rs
crates/alexandrie/.rpm/: alexandrie.service  alexandrie.spec  alexandrie.toml  crate-index-config.json
crates/alexandrie/src/: error.rs  logs.rs  main.rs
crates/alexandrie/src/api/: categories.rs  mod.rs
crates/alexandrie/src/api/account/: login.rs  mod.rs  register.rs
crates/alexandrie/src/api/account/token/: generate.rs  info.rs  mod.rs  revoke.rs
crates/alexandrie/src/api/crates/: download.rs  info.rs  owners.rs  publish.rs  search.rs  suggest.rs  unyank.rs  yank.rs
crates/alexandrie/src/api/sparse/: mod.rs
crates/alexandrie/src/config/: frontend.rs  mod.rs  serde_utils.rs
crates/alexandrie/src/config/frontend/: mod.rs
crates/alexandrie/src/config/frontend/auth/: github.rs  gitlab.rs  local.rs  mod.rs
crates/alexandrie/src/db/: database.rs  mod.rs  models.rs  schema.rs
crates/alexandrie/src/frontend/: categories.rs  categories_index.rs  helpers.rs  index.rs  indexer.rs  keywords.rs  keywords_index.rs  keywords_search.rs  krate.rs  last_updated.rs  me.rs  mod.rs  most_downloaded.rs  search.rs
crates/alexandrie/src/frontend/account/: login.rs  logout.rs  mod.rs  register.rs  utils.rs
crates/alexandrie/src/frontend/account/github/: attach.rs  callback.rs  detach.rs  mod.rs
crates/alexandrie/src/frontend/account/gitlab/: attach.rs  callback.rs  detach.rs  mod.rs
crates/alexandrie/src/frontend/account/manage/: mod.rs  passwd.rs
crates/alexandrie/src/frontend/account/manage/tokens/: mod.rs  revoke.rs
crates/alexandrie/src/fts/: document.rs  index.rs  mod.rs
crates/alexandrie/src/utils/: build.rs  checks.rs  mod.rs  request_log.rs  sessions.rs
crates/alexandrie/src/utils/auth/: api.rs  frontend.rs  mod.rs
crates/alexandrie/src/utils/response/: common.rs  mod.rs
docker/: README.md  alexandrie.toml  diesel.toml  startup.sh
docker/mysql/: Cargo.toml  alexandrie.toml  mysql-compose.yaml
docker/postgres/: alexandrie.toml  example.rootpass.txt  postgres-compose.yaml
docker/postgresql/: Cargo.toml  postgresql-compose.yaml
docker/sqlite/: Cargo.toml  alexandrie.toml
docs/: book.toml
docs/src/: SUMMARY.md  database-layout.md  getting-started.md  how-to-extend.md  installation-script.md  introduction.md
e2e/: README.md
e2e/images/: .gitignore  docker-compose.yaml  gen-keys.sh  mysql-compose.yaml  postgres-compose.yaml  run-scenario.sh
helpers/readme-render/: Cargo.toml
helpers/readme-render/src/: main.rs
helpers/syntect-dump/: Cargo.toml
helpers/syntect-dump/src/: main.rs
programmatic-api/: authentication.html  mod.html
programmatic-api/account/: mod.html
programmatic-api/categories/: get.html
programmatic-api/crates/: mod.html
src/: api.rs  auth.rs  catchers.rs  config.rs  error.rs  index.rs  krate.rs  logs.rs  main.rs  state.rs
src/api/: categories.rs  download.rs  mod.rs  owners.rs  publish.rs  search.rs  unyank.rs  yank.rs
src/config/: database.rs  frontend.rs  mod.rs  syntect.rs
src/db/: mod.rs  models.rs  schema.rs
src/frontend/: config.rs  helpers.rs  index.rs  krate.rs  last_updated.rs  me.rs  mod.rs  most_downloaded.rs  search.rs
src/index/: cli.rs  git2.rs  mod.rs  models.rs  repository.rs  tree.rs
src/storage/: disk.rs  mod.rs
src/utils/: auth.rs  checks.rs  cookies.rs  flash.rs  mod.rs  rendering.rs  request_log.rs  response.rs  (+2 more)
syntect-dumps/: syntaxes.dump  themes.dump
syntect-themes/: frontier-contrast.tmTheme
templates/: categories.hbs  categories_index.hbs  crate.hbs  error.hbs  index.hbs  keywords.hbs  keywords_index.hbs  keywords_search.hbs  last-updated.hbs  most-downloaded.hbs  search.hbs
wasm-pbkdf2/: .gitignore  Cargo.toml
wasm-pbkdf2/src/: lib.rs
whats-available/: authentication-strategies.html  crate-stores.html  docker.html  index-management-strategies.html  mod.html
(+1668 files in other folders)
