[package]
name = "alexandrie"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "An alternative crate registry, implemented in Rust."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]

default-run = "alexandrie"

[dependencies]
# core
tide =  { git = "https://github.com/rustasync/tide", rev = "af0b900" }
http = { version = "0.1.18" }
runtime = { version = "0.3.0-alpha.7" }
runtime-tokio = { version = "0.3.0-alpha.6" }

# data types
semver = { version = "0.9.0", features = ["serde"] }
chrono = { version = "0.4.7", features = ["serde"] }

# file formats
serde = { version = "1.0.98", features = ["derive"] }
json = { package = "serde_json", version = "1.0.40" }
toml = { version = "0.5.1" }

# binary parsing
byteorder = { version = "1.3.2" }
bytes = { version = "0.4.12" }

# (en|de)coding / hashing
ring = { version = "0.16.9" }
hex = { version = "0.3.2" }
base64 = { version = "0.10.1" }
percent-encoding = { version = "2.1.0" }

# database
diesel = { version = "1.4.2", features = ["r2d2", "chrono", "numeric"] }
diesel_migrations = { version = "1.4.0" }

# async primitives
tokio = { version = "0.1.19" }
tokio-threadpool = { version = "0.1.15" }
futures_01 = { package = "futures", version = "0.1.28" }
futures-preview = { version = "0.3.0-alpha.18", features = ["nightly", "async-await", "compat"] }

# error handling
thiserror = { version = "1.0.1" }

# README rendering
syntect = { version = "3.2.0" }
cmark = { package = "pulldown-cmark", version = "0.5.2" }
flate2 = { version = "1.0.9" }
tar = { version = "0.4.26" }

# frontend
handlebars = { version = "2.0.1", optional = true }
cookie = { version = "0.12.0", optional = true }
time = { version = "0.1.42", optional = true }
num-format = { version = "0.4.0", optional = true }
bigdecimal = { version = "0.1.0", features = ["serde"], optional = true }

# git2
git2 = { version = "0.10.1", optional = true }

# logs
log = { version = "0.3.6" }
slog = { version = "2.5.2" }
slog-stdlog = { version = "3.0.5" }
slog-scope = { version = "4.1.2" }
slog-term = { version = "2.4.1" }
slog-async = { version = "2.3.0" }
slog-json = { version = "2.3.0" }

# miscellaneous
path-absolutize = { version = "1.1.6" }
mime_guess = { version = "2.0.1" }

[features]
default = ["frontend", "sqlite"]
frontend = ["handlebars", "num-format", "bigdecimal", "cookie", "time"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
