[package]
name = "alexandrie"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "An alternative crate registry, implemented in Rust."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

default-run = "alexandrie"

[dependencies]
# core
tide = { version = "0.5.0" }
http = { version = "0.1.21" }

# data types
url = { version = "2.1.1" }
semver = { version = "0.9.0", features = ["serde"] }
chrono = { version = "0.4.10", features = ["serde"] }

# file formats
serde = { version = "1.0.104", features = ["derive"] }
json = { package = "serde_json", version = "1.0.44" }
toml = { version = "0.5.5" }

# binary parsing
byteorder = { version = "1.3.2" }
bytes = { version = "0.5.3" }

# (en|de)coding / hashing
ring = { version = "0.16.9" }
hex = { version = "0.4.0" }
base64 = { version = "0.11.0" }
percent-encoding = { version = "2.1.0" }

# database
diesel = { version = "1.4.3", features = ["r2d2", "chrono", "numeric"] }
diesel_migrations = { version = "1.4.0" }

# async primitives
async-std = { version = "1.4.0", features = ["unstable", "attributes"] }
futures = { version = "0.3.1" }

# error handling
thiserror = { version = "1.0.9" }

# README rendering
syntect = { version = "3.3.0" }
cmark = { package = "pulldown-cmark", version = "0.6.1" }
flate2 = { version = "1.0.13" }
tar = { version = "0.4.26" }

# frontend
handlebars = { version = "2.0.4", optional = true }
cookie = { version = "0.12.0", features = ["percent-encode"], optional = true }
time = { version = "0.1.42", optional = true }
num-format = { version = "0.4.0", optional = true }
bigdecimal = { version = "0.1.0", features = ["serde"], optional = true }

# git2
git2 = { version = "0.11.0", optional = true }

# logs
log = { version = "0.4.8" }
slog = { version = "2.5.2" }
slog-stdlog = { version = "4.0.0" }
slog-scope = { version = "4.3.0" }
slog-term = { version = "2.4.2" }
slog-async = { version = "2.3.0" }
slog-json = { version = "2.3.0" }

# miscellaneous
path-absolutize = { version = "1.1.7" }
mime_guess = { version = "2.0.1" }

[features]
# default = ["frontend", "sqlite"]
# default = ["frontend", "mysql"]
default = ["frontend", "postgres"]
frontend = ["handlebars", "num-format", "bigdecimal", "cookie", "time"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
