[package]
name = "alexandrie-storage"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "The crate storage library for Alexandrie, an alternative crate registry."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

# [badges]
# codecov = { repository = "Hirevo/alexandrie"}

[dependencies]
# data types
semver = { version = "0.10.0", features = ["serde"] }

# file formats
serde = { version = "1.0.114", features = ["derive"] }

# error handling
thiserror = "1.0.20"

# S3 crate storage
lazy_static = { version = "1.4.0", optional = true }
rusoto_core = { version = "0.45", optional = true }
rusoto_s3 = { version = "0.45", optional = true }
tokio = { version = "0.2.22", optional = true }

[features]
default = []
s3 = ["lazy_static", "rusoto_core", "rusoto_s3", "tokio/rt-threaded"]
