[package]
name = "alexandrie"
version = "0.1.0"
edition = "2018"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "An alternative crate registry, implemented in Rust."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

default-run = "alexandrie"

[badges]
codecov = { repository = "Hirevo/alexandrie"}

[dependencies]
# internal
alexandrie-index = { path = "../alexandrie-index", version = "0.1.0" }
alexandrie-storage = { path = "../alexandrie-storage", version = "0.1.0" }
alexandrie-rendering = { path = "../alexandrie-rendering", version = "0.1.0" }

# core
tide = "0.12.0"
clap = "2.33.1"
# data types
url = "2.1.1"
semver = { version = "0.10.0", features = ["serde"] }
chrono = { version = "0.4.13", features = ["serde"] }

# file formats
serde = { version = "1.0.114", features = ["derive"] }
json = { package = "serde_json", version = "1.0.56" }
toml = "0.5.6"

# binary parsing
byteorder = "1.3.4"

# (en|de)coding / hashing
ring = "0.16.15"
hex = "0.4.2"
base64 = "0.12.3"
percent-encoding = "2.1.0"

# database
diesel = { version = "1.4.5", features = ["r2d2", "chrono"] }
diesel_migrations = "1.4.0"

# async primitives
async-std = { version = "1.6.2", features = ["unstable", "attributes"] }
futures = "0.3.5"

# error handling
thiserror = "1.0.20"

# README rendering
flate2 = "1.0.16"
tar = "0.4.29"

# frontend
handlebars = { version = "3.3.0", features = ["dir_source"], optional = true }
cookie = { version = "0.14.2", features = ["percent-encode"], optional = true }
time = { version = "0.2.16", optional = true }
num-format = { version = "0.4.0", optional = true }
bigdecimal = { version = "0.1.2", features = ["serde"], optional = true }

# logs
log = "0.4.11"
slog = "2.5.2"
slog-stdlog = "4.0.0"
slog-scope = "4.3.0"
slog-term = "2.6.0"
slog-async = "2.5.0"

[features]
default = ["frontend", "sqlite"]
# default = ["frontend", "mysql"]
# default = ["frontend", "postgres"]
frontend = ["handlebars", "num-format", "bigdecimal", "cookie", "time", "diesel/numeric"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
git2 = ["alexandrie-index/git2"]
s3 = ["alexandrie-storage/s3"]
