[package]
name = "wasm-pbkdf2"
description = "WASM packaging of PBKDF2 utilities"
version = "0.1.0"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = { version = "0.2.51" }
ring = { version = "0.16.9" }
hex = { version = "0.4.0" }
