[package]
name = "alexandrie-index"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "The index management library for Alexandrie, an alternative crate registry."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

# [badges]
# codecov = { repository = "Hirevo/alexandrie"}

[dependencies]
# data types
semver = { version = "0.11.0", features = ["serde"] }

# file formats
serde = { version = "1.0.125", features = ["derive"] }
json = { package = "serde_json", version = "1.0.64" }

# error handling
thiserror = "1.0.24"

# git2
git2 = { version = "0.13.18", optional = true }

[features]
