[package]
name = "alexandrie-rendering"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "The markdown rendering library for Alexandrie, an alternative crate registry."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

# [badges]
# codecov = { repository = "Hirevo/alexandrie"}

[dependencies]
# file formats
serde = { version = "1.0.160", features = ["derive"] }

# README rendering
syntect = "5.0.0"
cmark = { package = "pulldown-cmark", version = "0.9.2" }
ammonia = "3.3.0"

[features]
