[package]
name = "alexandrie-storage"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "The crate storage library for Alexandrie, an alternative crate registry."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"

# [badges]
# codecov = { repository = "Hirevo/alexandrie"}

[dependencies]
# async runtime
async-std = { version = "1.12.0", features = ["tokio1"], optional = true }

# data types
semver = { version = "1.0.17", features = ["serde"] }

# file formats
serde = { version = "1.0.160", features = ["derive"] }

# error handling
thiserror = "1.0.40"

# S3 crate storage
rusoto_core = { version = "0.48.0", optional = true }
rusoto_s3 = { version = "0.48.0", optional = true }

[features]
default = []
s3 = ["dep:async-std", "dep:rusoto_core", "dep:rusoto_s3"]
