[package]
name = "alexandrie"
version = "0.1.0"
edition = "2021"
rust-version = "1.68.0"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "An alternative crate registry, implemented in Rust."
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
keywords = ["crates", "cargo", "web", "registry"]
categories = ["development-tools"]
license = "MIT OR Apache-2.0"
build = "build.rs"

[badges]
codecov = { repository = "Hirevo/alexandrie"}

[dependencies]
# internal
alexandrie-index = { path = "../alexandrie-index", version = "0.1.0" }
alexandrie-storage = { path = "../alexandrie-storage", version = "0.1.0" }
alexandrie-rendering = { path = "../alexandrie-rendering", version = "0.1.0" }

# core
tide = { version = "0.16.0", default-features = false, features = ["h1-server", "sessions"] }
clap = { version = "4.2.2", features = ["string"] }

# session handling
async-session = "3.0.0"

# data types
url = "2.3.1"
semver = { version = "1.0.17", features = ["serde"] }
chrono = { version = "0.4.24", features = ["serde"] }

# file formats
serde = { version = "1.0.160", features = ["derive"] }
json = { package = "serde_json", version = "1.0.96" }
toml = "0.7.3"

# binary parsing
byteorder = "1.4.3"

# (en|de)coding / hashing
ring = "0.16.20"
hex = "0.4.3"
percent-encoding = "2.2.0"

# database
diesel = { version = "2.0.3", features = ["r2d2", "chrono"] }
diesel_migrations = "2.0.0"

# Text indexation and search
tantivy = "0.20"
tantivy-analysis-contrib = { version = "0.9", default-features = false, features = ["commons"] }

# async primitives
async-std = { version = "1.12.0", features = ["attributes", "tokio1"] }

# error handling
thiserror = "1.0.40"

# README rendering
flate2 = "1.0.25"
tar = "0.4.38"

# frontend
handlebars = { version = "4.3.6", features = ["dir_source"], optional = true }
time = { version = "0.3.20", optional = true }
num-format = { version = "0.4.4", optional = true }
bigdecimal = { version = "0.3.0", features = ["serde"], optional = true }
oauth2 = { version = "4.3.0", optional = true }
reqwest = { version = "0.11.16", optional = true, features = ["json"] }
once_cell = { version = "1.17.1", optional = true }
regex = { version = "1.7.3", optional = true }

# logs
log = "0.4.17"
slog = "2.7.0"
slog-stdlog = "4.1.1"
slog-scope = "4.4.0"
slog-term = "2.9.0"
slog-async = "2.7.0"

[features]
default = ["frontend", "sqlite"]
# default = ["frontend", "mysql"]
# default = ["frontend", "postgres"]
mysql = ["diesel/mysql", "diesel_migrations/mysql"]
sqlite = ["diesel/sqlite", "diesel_migrations/sqlite"]
postgres = ["diesel/postgres", "diesel_migrations/postgres"]
git2 = ["alexandrie-index/git2"]
s3 = ["alexandrie-storage/s3"]
frontend = ["dep:handlebars", "dep:oauth2", "dep:once_cell", "dep:regex", "dep:reqwest", "dep:num-format", "dep:bigdecimal", "dep:time", "diesel/numeric"]

[build-dependencies]
built = { version = "0.6.0", features = ["git2", "chrono"] }
