[package]
name = "syntect-dump"
version = "0.1.0"
edition = "2021"
authors = ["Nicolas Polomack <nicolas@polomack.eu>"]
description = "A simple helper to generate syntect's binary dumps for Alexandrie"
repository = "https://github.com/Hirevo/alexandrie"
documentation = "https://crates.polomack.eu/docs/alexandrie"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
syntect = "5.0.0"

[features]
